@@ -6,11 +6,12 @@ import com.alibaba.fastjson.JSONObject;
 import lombok.extern.slf4j.Slf4j;
 
 import javax.net.ssl.*;
-import java.io.*;
-import java.net.HttpURLConnection;
-import java.net.URL;
-import java.nio.charset.StandardCharsets;
+import java.net.URI;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
 import java.security.cert.X509Certificate;
+import java.time.Duration;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
@@ -18,19 +19,14 @@ import java.util.Map;
 
 /**
  * 豆包AI工具类
- * 使用原生HttpURLConnection + 自定义SSL，兼容Java 8
+ * 使用Java 17原生HttpClient
  */
 @Slf4j
 public class DoubaoAIUtil {
 
-    private static final SSLSocketFactory sslSocketFactory;
-    private static final HostnameVerifier hostnameVerifier;
+    private static final HttpClient httpClient = createHttpClient();
 
-    static {
-        // 强制JVM使用TLS 1.2
-        System.setProperty("https.protocols", "TLSv1.2");
-
-        SSLSocketFactory tmpFactory = null;
+    private static HttpClient createHttpClient() {
         try {
             TrustManager[] trustAllCerts = new TrustManager[]{
                 new X509TrustManager() {
@@ -39,25 +35,28 @@ public class DoubaoAIUtil {
                     public void checkServerTrusted(X509Certificate[] certs, String authType) {}
                 }
             };
-            SSLContext sslContext = SSLContext.getInstance("TLSv1.2");
+
+            SSLContext sslContext = SSLContext.getInstance("TLS");
             sslContext.init(null, trustAllCerts, new java.security.SecureRandom());
-            tmpFactory = sslContext.getSocketFactory();
-            log.info("SSL初始化成功，协议: TLSv1.2");
+
+            return HttpClient.newBuilder()
+                    .sslContext(sslContext)
+                    .connectTimeout(Duration.ofSeconds(15))
+                    .version(HttpClient.Version.HTTP_1_1)
+                    .build();
         } catch (Exception e) {
-            log.error("SSL初始化失败", e);
-            tmpFactory = (SSLSocketFactory) SSLSocketFactory.getDefault();
+            log.error("HttpClient初始化失败", e);
+            return HttpClient.newBuilder()
+                    .connectTimeout(Duration.ofSeconds(15))
+                    .build();
         }
-        sslSocketFactory = tmpFactory;
-        hostnameVerifier = (hostname, session) -> true;
     }
 
     /**
-     * 调用豆包AI（使用原生HttpURLConnection，不依赖RestTemplate）
+     * 调用豆包AI
      */
     public static String chat(String apiKey, String apiUrl, String model, String systemPrompt, String userMessage) {
-        HttpURLConnection conn = null;
         try {
-            // 构建消息列表
             List<Map<String, String>> messages = new ArrayList<>();
 
             Map<String, String> systemMsg = new HashMap<>();
@@ -70,7 +69,6 @@ public class DoubaoAIUtil {
             userMsg.put("content", userMessage);
             messages.add(userMsg);
 
-            // 构建请求体
             Map<String, Object> requestBody = new HashMap<>();
             requestBody.put("model", model);
             requestBody.put("messages", messages);
@@ -78,53 +76,22 @@ public class DoubaoAIUtil {
             requestBody.put("max_tokens", 500);
 
             String jsonBody = JSON.toJSONString(requestBody);
-
             log.info("调用豆包AI，用户消息: {}", userMessage);
 
-            // 创建连接
-            URL url = new URL(apiUrl);
-            conn = (HttpURLConnection) url.openConnection();
+            HttpRequest request = HttpRequest.newBuilder()
+                    .uri(URI.create(apiUrl))
+                    .header("Content-Type", "application/json")
+                    .header("Authorization", "Bearer " + apiKey)
+                    .POST(HttpRequest.BodyPublishers.ofString(jsonBody))
+                    .timeout(Duration.ofSeconds(30))
+                    .build();
 
-            // 如果是HTTPS，应用自定义SSL配置
-            if (conn instanceof HttpsURLConnection) {
-                HttpsURLConnection httpsConn = (HttpsURLConnection) conn;
-                httpsConn.setSSLSocketFactory(sslSocketFactory);
-                httpsConn.setHostnameVerifier(hostnameVerifier);
-            }
+            HttpResponse<String> response = httpClient.send(request, HttpResponse.BodyHandlers.ofString());
 
-            conn.setRequestMethod("POST");
-            conn.setRequestProperty("Content-Type", "application/json; charset=UTF-8");
-            conn.setRequestProperty("Authorization", "Bearer " + apiKey);
-            conn.setConnectTimeout(15000);
-            conn.setReadTimeout(30000);
-            conn.setDoOutput(true);
-            conn.setDoInput(true);
-
-            // 写入请求体
-            try (OutputStream os = conn.getOutputStream()) {
-                byte[] input = jsonBody.getBytes(StandardCharsets.UTF_8);
-                os.write(input, 0, input.length);
-                os.flush();
-            }
-
-            // 读取响应
-            int responseCode = conn.getResponseCode();
-            InputStream inputStream = (responseCode >= 200 && responseCode < 300)
-                    ? conn.getInputStream()
-                    : conn.getErrorStream();
-
-            StringBuilder responseBuilder = new StringBuilder();
-            try (BufferedReader br = new BufferedReader(new InputStreamReader(inputStream, StandardCharsets.UTF_8))) {
-                String line;
-                while ((line = br.readLine()) != null) {
-                    responseBuilder.append(line);
-                }
-            }
-
-            String responseBody = responseBuilder.toString();
-
-            if (responseCode == 200) {
+            if (response.statusCode() == 200) {
+                String responseBody = response.body();
                 log.info("豆包AI响应: {}", responseBody);
+
                 JSONObject jsonResponse = JSON.parseObject(responseBody);
                 JSONArray choices = jsonResponse.getJSONArray("choices");
 
@@ -135,16 +102,12 @@ public class DoubaoAIUtil {
                 }
             }
 
-            log.error("豆包AI调用失败，状态码: {}, 响应: {}", responseCode, responseBody);
+            log.error("豆包AI调用失败，状态码: {}, 响应: {}", response.statusCode(), response.body());
             return "抱歉，AI助手暂时无法回答，请稍后再试。";
 
         } catch (Exception e) {
             log.error("调用豆包AI异常", e);
             return "抱歉，AI服务出现异常：" + e.getMessage();
-        } finally {
-            if (conn != null) {
-                conn.disconnect();
-            }
         }
     }
 
